2004-05-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in:      Added a dependency rule to document creation -
	                    fixes SF bug #681115

2004-05-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* Makefile.in:         Added random channel.
	* generic/random.c:
	* tests/random.test:
	* doc/random.man:
	* generic/init.c:
	* generic/memchanInt.h:
	* isaac/rand.h:
	* isaac/randport.c:
	* isaac/standard.h:
	

	* win/makefile.vc:   Updated the MSVC build system for use with
	* win/mc.rc:         MSVC++ 6 or 7.
	* win/rules.vc:
	* win/nmakehlp.c: 

2004-05-21  Andreas Kupries  <andreask@activestate.com>

	* generic/fifo2.c:   Failure in BMP is not allowed.
	* generic/fifo.c:    Seek sets the channel temp. to
	* generic/memchan.c: blocking 1.
	* generic/null.c:

2004-05-20  Andreas Kupries  <andreask@activestate.com>

	* generic/fifo2.c:   Gave all drivers a BlockMode proc (BMP).
	* generic/fifo.c:    This proc will reject all attempts
	* generic/memchan.c: to set -blocking 1. But the main
	* generic/null.c:    purpose is to ensure that the
	                     Tcl IO core does not believe that is
			     has to do non-blocking on its own.

2004-02-18  Andreas Kupries  <andreask@activestate.com>

	* DESCRIPTION.txt: Updated to dinstinguish CVS from release.
	* generic/fifo.c (Input):    Fixed bug in reporting when at
	* generic/memchan.c (Input): the end of the buffer. Has to
	                             be 0/no-error, not -1/wouldblock.

2003-05-15  Andreas Kupries  <andreask@activestate.com>

	* generic/memchanInt.h: forcing usage of 'sprintf' for the
	  generation of the channel name across all platforms
	  now. Encountered an HP lto with a different signature than we
	  use here, causing the code to get what is essentially on the
	  stack as handle suffix, completely bogus.

2003-04-04  Andreas Kupries  <andreask@activestate.com>

	* configure.in:
	* tclconfig/tcl.m4: Updated to newest tcl.m4, regenerated
	  configure's.
