@@ -1,3 +1,11 @@
+2004-05-31  Andreas Kupries  <andreask@pliers.activestate.com>
+
+	* generic/random.c: Added empty BMP. Also removed references to
+	  the 'null' channel, changed them into 'random'.
+
+	* Makefile.in: Fixed typo DOC_* => DOC_*. Caused the documentation
+	  to not be installed.
+
 2004-05-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* Makefile.in:      Added a dependency rule to document creation -
